--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "bcrypt": "^5.1.1",
     "geist": "^1.3.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
