--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
+    "resend": "^3.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
