--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "bcrypt": "^5.1.1",
     "geist": "^1.3.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
@@ -39,6 +40,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
