--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "resend": "^3.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
