--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/e-commerce-moonshot"
+SECRET_KEY=
+RESEND_API_KEY=
